--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-    <script src="src/require.js"></script>
+    <script data-main="dist/main.js" src="dist/require.js"></script>
     <script>
-        require(['dist/bundle']);
+        require(['my-app-bundle'], function (foo) {
+            foo.mount('x');
+        });
     </script>
 </body>
 
